updated other services

--- a/armor-microservice/src/main/resources/application.properties
+++ b/armor-microservice/src/main/resources/application.properties
@@ -1,22 +1,30 @@
 spring.application.name=armor-microservice
 
-# setup server port
-server.port=${SERVER_PORT}
+# optional keyword allows the service to start even if it fails to load config
+# can remove to make it mandatory
+spring.config.import=optional:configserver:http://localhost:${CONFIG_PORT}/
 
-# setup local h2 database config
-spring.datasource.url=jdbc:h2:file:./data/demo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# setup local h2 database console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=false
+# # setup server port
+# server.port=${SERVER_PORT}
 
-# setup local h2 tables on startup
-spring.jpa.hibernate.ddl-auto=update
+# # setup local h2 database config
+# spring.datasource.url=jdbc:h2:file:./data/demo
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# allow devtools restart support
-spring.devtools.restart.enabled=true
+# # setup local h2 database console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.h2.console.settings.web-allow-others=false
+
+# # setup local h2 tables on startup
+# spring.jpa.hibernate.ddl-auto=update
+
+# # allow devtools restart support
+# spring.devtools.restart.enabled=true
+
+# eureka.client.service-url.default-zone=http://localhost:${EUREKA_PORT}/eureka/
+
